@@ -7,10 +7,9 @@ distshare={toxworkdir}/distshare
 sdistsrc={distshare}/py-*
 
 [testenv]
-changedir=testing  
+changedir=testing
 commands=
-  py.test --confcutdir=..  -rfsxX \
-        --junitxml={envlogdir}/junit-{envname}.xml --tools-on-path []
+  py.test -rfsxX --junitxml={envlogdir}/junit-{envname}.xml --tools-on-path []
 deps= 
     pexpect
 [testenv:py27]
@@ -21,7 +20,7 @@ deps=
     {distshare}/py-*
     {distshare}/pytest-xdist-*
 commands=
-  py.test -n3 --confcutdir=..  -rfsxX \
+  py.test -n3 -rfsxX \
         --junitxml={envlogdir}/junit-{envname}.xml --tools-on-path []
 
 [testenv:py26]
@@ -29,19 +28,18 @@ basepython=python2.6
 [testenv:doc]
 basepython=python
 changedir={toxinidir}
-deps=docutils 
+deps=docutils
      pygments
      {distshare}/py-*
      {distshare}/pytest-xdist-*
-     pytest-figleaf 
+     pytest-figleaf
      pytest-coverage
      pytest-cov
-     pytest-capturelog 
+     pytest-capturelog
  
-commands= 
-    {envpython} bin-for-dist/makepluginlist.py 
-    py.test [doc] -rsfxX --confcutdir=. \
-        --junitxml={envlogdir}/junit-{envname}s.xml --forcegen 
+commands=
+    {envpython} bin-for-dist/makepluginlist.py
+    py.test [doc] -rsfxX --junitxml={envlogdir}/junit-{envname}s.xml --forcegen
 [testenv:py25]
 basepython=python2.5
 [testenv:py24]
@@ -55,7 +53,7 @@ deps=
 changedir=testing
 basepython=jython
 commands=
-    {envpython} {envbindir}/py.test-jython --confcutdir=..  \
+    {envpython} {envbindir}/py.test-jython \
         -rfsxX --junitxml={envlogdir}/junit-{envname}1.xml [io_ code]
-    {envpython} {envbindir}/py.test-jython --confcutdir=..  \
+    {envpython} {envbindir}/py.test-jython \
         -rfsxX --junitxml={envlogdir}/junit-{envname}2.xml acceptance_test.py plugin
