@@ -1,11 +1,14 @@
 Changes between 1.3.2 and 1.3.3a1
 ==================================================
 
+- make conftest loading detect that a conftest file with the same 
+  content was already loaded, avoids surprises in nested directory structures
+  that can be produced e.g. by Hudson. It alleviates the need to use 
+  --confcutdir at all. 
 - fix terminal coloring for win32
   (thanks Michael Foord for reporting)
 - fix weirdness: make terminal width detection work on stdout instead of stdin 
   (thanks Armin Ronacher for reporting) 
-
 - remove trailing whitespace in all py/text files
 
 Changes between 1.3.1 and 1.3.2
